# NanoRec-CPP

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  PHASE_1_2_SUMMARY.md  REFACTORING.md  REFACTORING_SUMMARY.md  SCREEN_CAPTURE.md  WINDOWS_BUILD.md  tasks.md
include/: NanoRec.hpp
include/capture/: IScreenCapture.hpp  LinuxScreenCapture.hpp  MonitorInfo.hpp  ScreenCaptureFactory.hpp  WindowsScreenCapture.hpp
include/core/: Application.hpp  CaptureThread.hpp  Config.hpp  FFmpegVideoWriter.hpp  FrameScaler.hpp  IVideoWriter.hpp  ImageWriter.hpp  Logger.hpp  ThreadSafeFrameBuffer.hpp  Version.hpp
include/ui/: GLTexture.hpp
scripts/: build.sh  run.sh  setup.sh
src/: main.cpp
src/capture/: LinuxScreenCapture.cpp  ScreenCaptureFactory.cpp  WindowsScreenCapture.cpp
src/core/: Application.cpp  CaptureThread.cpp  Config.cpp  FFmpegVideoWriter.cpp  FrameScaler.cpp  ImageWriter.cpp  Logger.cpp  ThreadSafeFrameBuffer.cpp  Version.cpp
src/ui/: GLTexture.cpp
tests/: README.md  test_capture.cpp  test_imgui_basic.cpp  test_recording.cpp  test_window.cpp
